tests/snapshots/run_wpt_conformance__litert_leakyRelu_float32_2D_tensor_positive_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "leaky_relu.https.any.js",
    "leakyRelu float32 2D tensor positive options.alpha",
    "litert",
    "PASS",
)
